--- a/service.html
+++ b/service.html
@@ -3,10 +3,44 @@
 
 
 <head>
-    <style>
-        body { background-color: purple; }
-        p { color: #fff; }
-    </style>
+    <div class="container">
+        <div class="row">
+                <h1>Contact Tanika</h1>
+        </div>
+        <div class="row">
+                <h4 style="text-align:center">I'd love to hear from you!</h4>
+        </div>
+        <div class="row input-container">
+                <div class="col-xs-12">
+                    <div class="styled-input wide">
+                        <input type="text" required />
+                        <label>Name</label> 
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="styled-input">
+                        <input type="text" required />
+                        <label>Email</label> 
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="styled-input" style="float:right;">
+                        <input type="text" required />
+                        <label>Phone Number</label> 
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="styled-input wide">
+                        <textarea required></textarea>
+                        <label>Message</label>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="btn-lrg submit-btn">Send Message</div>
+                </div>
+        </div>
+    </div>
+    
 
 
 <body>
