--- a/Extras/extraextra.html
+++ b/Extras/extraextra.html
@@ -46,6 +46,10 @@
             <div class="photo">
               <div class="photo__image"><img src="/IMG/Dog mom 2.jpg"/></div>
               <div class="photo__name">Dog Mom</div>
+              <div class="photo">
+                <div class="photo__image"><img src="/IMG/pure joy.jpg"/></div>
+                <div class="photo__name">Pure joy</div>
+              </div>
             </div>
           </div>
         </div>
@@ -87,6 +91,26 @@
               <div class="photo__image"><img src="/IMG/restoration chandelier.jpg"/></div>
               <div class="photo__name">Restoration</div>
             </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/IMG/before and after.jpg"/></div>
+              <div class="photo__name">Restoration</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/IMG/chair restored.jpg"/></div>
+              <div class="photo__name">Restoration</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/IMG/fireplace painted.jpg"/></div>
+              <div class="photo__name">Restoration</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/IMG/mirror before.jpg"/></div>
+              <div class="photo__name">Restoration</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/IMG/transformation stereo.gif"/></div>
+              <div class="photo__name">Restoration</div>
+            </div>
           </div>
         </div>
         <div class="gallery__strip__wrapper">
@@ -106,8 +130,17 @@
             <div class="photo">
               <div class="photo__image"><img src="/IMG/MsFreedompreneur Trading Love.jpg"/></div>
               <div class="photo__name">My Other Love</div>
+              <div class="photo">
+                <div class="photo__image"><img src="/IMG/Designing my space.jpg"/></div>
+                <div class="photo__name">Designing</div>
+                <div class="photo">
+                  <div class="photo__image"><img src="/IMG/Golden brown art work.jpg"/></div>
+                  <div class="photo__name">My Art</div>
+
             </div>
+            
           </div>
+
         </div>
       </div>   
    
