--- a/Extras/extraextra.html
+++ b/Extras/extraextra.html
@@ -12,11 +12,10 @@
 <div class="header">
 
     <div class="topnav">
-	
-		<a href="/TanikaWanjiru/index.html" class="link">Home</a>
-		<a href="/TanikaWanjiru/about.html" class="link">About</a>
-		<a href="/TanikaWanjiru/service.html" class="link">Services</a>
-		<a href="/TanikaWanjiru/contact.html" class="link">Contact</a>
+		<a href="/index.html" class="link">Home</a>
+		<a href="/about.html" class="link">About</a>
+		<a href="/service.html" class="link">Services</a>
+		<a href="/contact.html" class="link">Contact</a>
 	  </div>
     <h1 class="h1">Tanika Wanjiru | Outside of Work</h1>
     </div>
