--- a/Extras/extraextra.html
+++ b/Extras/extraextra.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<p>Write about things I like to do</p>
+<p>My life outside of work consist of many things. The most favorite of them all is to be the mother to a bright little 8 year old. I am also a dog mom to a gorgeous Goldendoodle named Dallas after my brother's favorite football team. I am the only surviving member of my immediately family. I am sharing with you pictures of my angels who surround me everyday. Next, you can see that I have a love for my beloved "Linesisters" of Delta Sigma Theta, Inc.  </p>
 
  
 <body>
