--- a/Extras/extraextra.html
+++ b/Extras/extraextra.html
@@ -31,23 +31,23 @@
         <div class="gallery__strip__wrapper">
           <div class="gallery__strip one">
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/My why.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/My why.jpg"/></div>
               <div class="photo__name">My Why</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/My joy.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/My joy.jpg"/></div>
               <div class="photo__name">My Joy</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/My entire heart.jpeg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/My entire heart.jpeg"/></div>
               <div class="photo__name">My Heart</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/Dog mom 2.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/Dog mom 2.jpg"/></div>
               <div class="photo__name">Dog Mom</div>
             </div>
               <div class="photo">
-                <div class="photo__image"><img src="/IMG/pure joy.jpg"/></div>
+                <div class="photo__image"><img src="/Documents for project/IMG/pure joy.jpg"/></div>
                 <div class="photo__name">Pure joy</div>
               </div>
           </div>
@@ -56,19 +56,19 @@
         <div class="gallery__strip__wrapper">
           <div class="gallery__strip two">
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/My Angels.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/restoration chandelier.jpg"/></div>
+              <div class="photo__name">Restoration</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/Documents for project/IMG/My Angels.jpg"/></div>
               <div class="photo__name">My Angels</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/My Two Angels.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/Father and Mother.jpg"/></div>
               <div class="photo__name">My Angels</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/Father and Mother.jpg"/></div>
-              <div class="photo__name">My Angels</div>
-            </div>
-            <div class="photo">
-              <div class="photo__image"><img src="/IMG/Favorite sorority picture.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/Favorite sorority picture.jpg"/></div>
               <div class="photo__name">Sisterhood</div>
             </div>
           </div>
@@ -76,31 +76,31 @@
         <div class="gallery__strip__wrapper">
           <div class="gallery__strip three">
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/Sisterhood.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/Sisterhood.jpg"/></div>
               <div class="photo__name">Sisterhood</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/beginning of mirror transformation.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/purple art work.jpg"/></div>
+              <div class="photo__name">Art</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/Documents for project/IMG/living room sitting area visualization.jpg"/></div>
+              <div class="photo__name">visualization</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/Documents for project/IMG/Golden brown art work.jpg"/></div>
+              <div class="photo__name">Art Work</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/Documents for project/IMG/Prayer room visualization.jpg"/></div>
+              <div class="photo__name">visualization</div>
+            </div>
+            <div class="photo">
+              <div class="photo__image"><img src="/Documents for project/IMG/ restored.jpg"/></div>
               <div class="photo__name">Restoration</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/Furniture restoration.jpg"/></div>
-              <div class="photo__name">Restoration</div>
-            </div>
-            <div class="photo">
-              <div class="photo__image"><img src="/IMG/restoration chandelier.jpg"/></div>
-              <div class="photo__name">Restoration</div>
-            </div>
-            <div class="photo">
-              <div class="photo__image"><img src="/IMG/before and after.jpg"/></div>
-              <div class="photo__name">Restoration</div>
-            </div>
-            <div class="photo">
-              <div class="photo__image"><img src="/IMG/chair restored.jpg"/></div>
-              <div class="photo__name">Restoration</div>
-            </div>
-            <div class="photo">
-              <div class="photo__image"><img src="/IMG/transformation stereo.gif"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/transformation stereo.gif"/></div>
               <div class="photo__name">Restoration</div>
             </div>
           </div>
@@ -108,19 +108,19 @@
         <div class="gallery__strip__wrapper">
           <div class="gallery__strip four">
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/Head girl work.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/purple art work.jpg"/></div>
               <div class="photo__name">My Art</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/Purple 4 piece work.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/My girl.jpg"/></div>
               <div class="photo__name">My Art</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/Candle love Trading.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/MsFreedompreneur Trading Love.jpg"/></div>
               <div class="photo__name">My Other Love</div>
             </div>
             <div class="photo">
-              <div class="photo__image"><img src="/IMG/MsFreedompreneur Trading Love.jpg"/></div>
+              <div class="photo__image"><img src="/Documents for project/IMG/Candle love Trading.jpg"/></div>
               <div class="photo__name">My Other Love</div>
               
 
