--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
 	<section id="contact">
 		<div class="contact-box">
 		  <div class="contact-links">
-			<h2>CONTACT Tanika</h2>
+			<h2>CONTACT Tanika </h2>
+			<h4>For Web Development Services</h4>
 			 
 		  </div>
 		  <div class="contact-form-wrapper">
