--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <head>
 	<link rel="Stylesheet" href="about.css">
 
-	<script src="about.js"></script>
+	
 	
  
   
@@ -66,12 +66,24 @@
 	
 		</div>
 	  </div>
+ <h1>Click to View Resume</h1>
+	  <img id="Resume" src="IMG/resume.jpg" alt="Resume" width="200" height="200" class="center">
 
-	  <div>
-        <h1>Resume</h1>
- 
-        <img id="Resume" src="/IMG/resume.jpg"/>
-    </div>
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>
+</div>
+        
+<script src="about.js"></script>
+		
 	  
 	  <div class="footer">
 		<h2>Ms. Freedompreneur</h2>
